--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,23 @@
 <!-- This is the landing page aka the About page -->
-<div class='col-md-12'>
+<div class='col-md-12 iron-throne-image'>
+	
 	<div class='row'>
 		<h2>About</h2>
 	</div>
 
-	<div class='row'>
-		<p>Quiz of Thrones was created to test your knowledge of the hit HBO series. No references to the books will be made. Ready to see how much you know about GOT?</p>
+		<div class='row'>
+			<p>Quiz of Thrones was created to test your knowledge of the hit HBO series. No references to the books will be made. Ready to see how much you know about GOT?</p>
+		</div>
+
+
+	<div class='col-md-2 col-md-offset-5'>
+		<div class='row'>
+			<a href='/questions' button type="button" class="btn btn-primary btn-lg" id='about_pg_start_quiz_btn'>Start Quiz!</a>
+		</div>
 	</div>
 
-	<div class='row'>
-		<a href='/questions' button type="button" class="btn btn-primary btn-lg" id='about_pg_start_quiz_btn'>Start Quiz!</a>
-	</div>
+
+<div id='stretch-image'></div>
+
+
 </div>
