--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -6,7 +6,8 @@
 		<ul>
 			<li class="questions"><%= question.content %></li>
 		</ul>
-		
+
+		<div class='question-answers-group'>
 		<% question.answers.each do |answer| %>
 			
 				<div class='input-group'>
@@ -21,7 +22,7 @@
 				</div>
 
 		<% end %>
-		
+		</div>
 		<br>
 
 	<% end %>
