changing url path for about page header link

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<div class='container-fluid'>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", home_index_path %></li>
+        <li><%= link_to "About", root_path %></li>
         <li><%= link_to "High Scores",scores_path %></li>
       </ul>
       
