fixing image 404 error on production

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -99,7 +99,7 @@ a:visited{
 	width:100%;
 }
 .iron-throne-image{
-	background-image: url("Iron-Throne.jpg");
+	background: image-url("Iron-Throne.jpg");
 	background-repeat:no-repeat;
 }
 #stretch-image{
