--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -1,1 +1,36 @@
-<%= render 'scores/highscores' %>
+<h2>High Scores</h2>
+<% if @score %>
+  <h3>Your Last Score: <%= @score %>% </h3>
+<% end %>
+
+	<div class='col-md-4 hidden-sm hidden-xs'>
+		<h3>Name</h3>
+	</div>
+	<div class='col-md-4 hidden-sm hidden-xs'>
+		<h3>Score</h3>
+	</div>
+	<div class='col-md-4 hidden-sm hidden-xs'>
+		<h3>Date</h3>
+	</div>
+
+	    <% @high_scores.each do |score| %>
+	      
+	    <div class='high-scores-inputs'>
+        <div class='col-md-4'>
+        	<row>
+        			<%=score.name %> 
+      	</div>
+
+      	<div class='col-md-4'>
+         <%=score.correct.to_f %>%
+       	</div>
+
+		<div class='col-md-4'>
+        	<%=score.created_at.strftime("%b. %d, %Y")%>
+    		</row>	
+      	</div>
+
+  		</div>
+	
+    <% end %>
+
