--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -55,6 +55,15 @@ p{
 input[type='text']{
 	color:black;
 }
+#quiz-submit-btn{
+	font-family:Game-of-Thrones;
+	color:black;
+}
+input[type='submit']{
+	padding:auto;
+}
+
+
 h1,h2,h3,input[type='text']{
 	font-family: "Game-of-Thrones";	
 }
@@ -75,8 +84,6 @@ ul{
 
 .input-group{
 	padding: auto;
-	
-
 }
 
 .input-group-addon:hover, .selected-answer{
@@ -90,7 +97,7 @@ a:visited{
 }
 
 
-#about_pg_start_quiz_btn, #quiz_submit_btn{
+#about_pg_start_quiz_btn, #quiz-submit-btn{
 	padding: 15px 15px 15px 15px;
 	font-size: 25px;
 	margin-top: 20px;
@@ -99,6 +106,7 @@ a:visited{
 	margin-left: auto;
 	width:100%;
 }
+
 .iron-throne-image{
 	background: image-url("Iron-Throne.jpg");
 	background-repeat:no-repeat;
