--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -27,7 +27,7 @@
 
 	<% end %>
 
-	<input type="submit" name="submit_btn" id='quiz_submit_btn'>	
+	<input type="submit" name="submit_btn" id='quiz-submit-btn'>	
 
 
 
